# harvester-sim

./: LICENSE  README.md
harvester_control/: CMakeLists.txt  package.xml
harvester_control/config/: j2s6s200_control.yaml
harvester_control/launch/: harvester_control.launch  move_home.launch
harvester_control/src/: move_robot.py  set_config.sh
harvester_description/: CMakeLists.txt  package.xml
harvester_description/meshes/: camera.dae  harvester_frame_assy_coarse - 40-4001-BLACK-FB_cross_bar-1.STL  harvester_frame_assy_coarse - 40-4001-BLACK-FB_cross_bar-2.STL  harvester_frame_assy_coarse - 40-4001-BLACK-FB_cross_bar-3.STL  harvester_frame_assy_coarse - 40-4001-BLACK-FB_cross_bar-4.STL  harvester_frame_assy_coarse - 40-4002-BLACK-FB-1.STL  harvester_frame_assy_coarse - 40-4002-BLACK-FB-2.STL  harvester_frame_assy_coarse - 40-4002-BLACK-FB-3.STL  harvester_frame_assy_coarse - 40-4002-BLACK-FB-4.STL  harvester_frame_assy_coarse - 40-4004-BLACK-FB_cross_bar-1.STL  harvester_frame_assy_coarse - 40-4004-BLACK-FB_cross_bar-2.STL  harvester_frame_assy_coarse - 40-4004-BLACK-FB_cross_bar-3.STL  harvester_frame_assy_coarse - 40-4004-BLACK-FB_cross_bar-4.STL  harvester_frame_assy_coarse - harvester_frame_top-1.STL  harvester_frame_assy_coarse - harvester_side_panel-1.STL  harvester_frame_assy_coarse - harvester_side_panel-2.STL  harvester_frame_assy_coarse - harvester_side_panel-3.STL  harvester_frame_assy_coarse - harvester_side_panel-4.STL  harvester_frame_assy_fine - 40-4001-BLACK-FB_cross_bar-1.STL  harvester_frame_assy_fine - 40-4001-BLACK-FB_cross_bar-2.STL  harvester_frame_assy_fine - 40-4001-BLACK-FB_cross_bar-3.STL  harvester_frame_assy_fine - 40-4001-BLACK-FB_cross_bar-4.STL  harvester_frame_assy_fine - 40-4002-BLACK-FB-1.STL  harvester_frame_assy_fine - 40-4002-BLACK-FB-2.STL  harvester_frame_assy_fine - 40-4002-BLACK-FB-3.STL  harvester_frame_assy_fine - 40-4002-BLACK-FB-4.STL  harvester_frame_assy_fine - 40-4004-BLACK-FB_cross_bar-1.STL  harvester_frame_assy_fine - 40-4004-BLACK-FB_cross_bar-2.STL  (+7 more)
harvester_gazebo/: CMakeLists.txt  package.xml
(+197 files in other folders)
