<?xml version="1.0"?>
<package format="2">
  <name>harvester_control</name>
  <version>0.0.0</version>
  <description>
    Package for controlling harvester robot.
  </description>

  <maintainer email="jonathon.sather@gmail.com">Jonathon Sather</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <build_depend>kinova_control</build_depend>
  <build_export_depend>kinova_control</build_export_depend>
  <exec_depend>kinova_control</exec_depend> -->

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
