<?xml version="1.0"?>
<package format="2">
  <name>harvester_gazebo</name>
  <version>0.0.0</version>
  <description>
      Contains tools for simulating robot in Gazebo.
  </description>

  <maintainer email="jonathon.sather@gmail.com">Jonathon Sather</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <build_depend>kinova_gazebo</build_depend>
  <build_export_depend>kinova_gazebo</build_export_depend>
  <exec_depend>kinova_gazebo</exec_depend> -->

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
